--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,34 @@
       ga('send', 'pageview');
     
       </script>
+
+      <!-- Google Sign in -->
+      <script src="https://apis.google.com/js/platform.js" async defer></script> 
+      <meta name="google-signin-client_id" content="724319730394-0p2g3j67ju1l310deto92mvqv3hasshn.apps.googleusercontent.com">
+
     <title>React App</title>
   </head>
   <body>
+    <!-- Facebook Login Script -->
+    <script>
+        window.fbAsyncInit = function() {
+          FB.init({
+            appId      : '1778225505809744',
+            cookie     : true,
+            xfbml      : true,
+            version    : 'v2.10'
+          });
+          FB.AppEvents.logPageView();   
+        };
+      
+        (function(d, s, id){
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) {return;}
+          js = d.createElement(s); js.id = id;
+          js.src = "//connect.facebook.net/en_US/sdk.js";
+          fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+      </script>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
